# libmiscar

./: .bazelrc  .bazelversion  .clang-format  .clang-tidy  .gitignore  .styleguide  .styleguide-license  BUILD  CMakeLists.txt  LICENSE.md  README.md  WORKSPACE  build.gradle  compile_commands.json  compile_flags.txt
.github/workflows/: build.yml  check.yaml  check.yml  lint-format.yml
.wpilib/: wpilib_preferences.json
src/main/cpp/: Main.cpp
src/main/cpp/miscar/: Firmware.h  Fix.cpp  Fix.h  LazyCallback.h  Log.cpp  Log.h  Named.cpp  Named.h  Network.cpp  Network.h  PID.cpp  PID.h  ResettableValueWrapper.h  Robot.cpp  Robot.h  Solenoid.cpp  Solenoid.h  ValueWrapper.h
src/main/cpp/miscar/can/: Falcon.cpp  Falcon.h  Pigeon.cpp  Pigeon.h  Spark.cpp  Spark.h  Talon.cpp  Talon.h  Victor.cpp  Victor.h
src/main/cpp/miscar/device/: DoubleSolenoid.cpp  DoubleSolenoid.h  Falcon.cpp  Falcon.h  Pigeon.cpp  SingleSolenoid.cpp  SingleSolenoid.h  Solenoid.cpp  Solenoid.h  Spark.cpp  Spark.h  Talon.cpp  Talon.h  Victor.cpp  Victor.h
src/main/cpp/miscar/joystick/: Extreme3DProController.cpp  Extreme3DProController.h  PS4Controller.cpp  PS4Controller.h  Xbox.h  Xbox360Controller.cpp  Xbox360Controller.h
src/main/cpp/miscar/motor/: Convertible.h  (+14 more)
src/main/cpp/utilities/: Fix.cpp
src/main/include/miscar/: Log.h  ResettableValueWrapper.h
src/main/include/utilities/: Fix.h  LazyCallback.h  ResettableValueWrapper.h  ValueWrapper.h
src/test/cpp/: Main.cpp
src/test/cpp/miscar/: TestFix.cpp  TestLazyCallback.cpp
src/test/cpp/utilities/: TestFix.cpp  TestLazyCallback.cpp
(+11 files in other folders)
